--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ canvas {
 }
 
 #color {
-    color: #BBB;
+    color: #AF3;
     font-family: helvetica, arial, sans-serif;
     font-size: 1.2em;
     position: absolute;
